[package]
name = "prediput"
version = "0.1.0"
edition = "2021"
description = "An intuitive, no-frills command-line prompting library for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
unicode-segmentation = "1.9.0"

[dev-dependencies]
clippy = "0.0.302"
colored = "2"
